--- a/BlazorLifeCycle/Pages/Counter.cshtml
+++ b/BlazorLifeCycle/Pages/Counter.cshtml
@@ -2,15 +2,39 @@
 
 <h1>Counter</h1>
 
-<p>Current count: @currentCount</p>
+<p>Current count: @currentCount?.Value</p>
 
 <button class="btn btn-primary" onclick="@IncrementCount">Click me</button>
 
 @functions {
-    int currentCount = 0;
 
-    void IncrementCount()
-    {
-        currentCount++;
-    }
+  CounterData currentCount ;
+
+  void IncrementCount()
+  {
+      currentCount.Value++;
+      Services.LifeCycle.AddToAppState("Counter", currentCount);
+      Console.WriteLine($"appState counter={((CounterData)Services.LifeCycle.appState["Counter"]).Value}");
+  }
+  protected override async Task OnParametersSetAsync()
+  {
+      await base.OnParametersSetAsync();
+      try
+      {
+          currentCount = await Services.LifeCycle.GetAppState<CounterData>("Counter");
+          Console.WriteLine($"INIT:Counter={currentCount.Value}");
+      }
+      catch (Exception ex)
+      {
+          currentCount = new CounterData();
+          Console.WriteLine($"INIT:Counter Initialised : {ex.GetBaseException().Message}");
+      }
+      StateHasChanged();
+  }
+  [Serializable]
+  class CounterData
+  {
+      public int Value;
+  }
+  //
 }
