--- a/BlazorLifeCycle/Pages/Counter.cshtml
+++ b/BlazorLifeCycle/Pages/Counter.cshtml
@@ -2,40 +2,34 @@
 
 <h1>Counter</h1>
 
-<p>Current count: @currentCount?.Value</p>
+<p>Current count: @currentCount</p>
 
 <button class="btn btn-primary" onclick="@IncrementCount">Click me</button>
 
 @functions {
 
-  CounterData currentCount;
+        int currentCount;
 
-  void IncrementCount()
-  {
-      currentCount.Value++;
-  }
+        void IncrementCount()
+        {
+            currentCount++;
+        }
 
   protected override async Task OnParametersSetAsync()
-  {
-      await base.OnParametersSetAsync();
-      try
-      {
-          Console.WriteLine("TEST: Getting Counter AppState");
-          currentCount = await Services.LifeCycle.GetAppState<CounterData>("Counter", 1);
-          Console.WriteLine($"TEST: Got Counter AppState {currentCount.Value}");
-      }
-      catch (Exception)
-      {
-          Console.WriteLine("TEST: Creating Counter AppState");
-          currentCount = new CounterData();
-          Services.LifeCycle.AddToAppState("Counter", currentCount, 1);
-      }
-  }
-
-  [Serializable]
-  class CounterData
-  {
-      public int Value;
-  }
-  //
+    {
+        await base.OnParametersSetAsync();
+        try
+        {
+            currentCount = await Services.LifeCycle.GetAppState<int>("Counter", DataSave);
+        }
+        catch (Exception)
+        {
+            Services.LifeCycle.AddToAppState("Counter", currentCount, 1, DataSave);
+        }
+    }
+    int DataSave()
+    {
+        return currentCount;
+    }
+    //
 }
