--- a/BlazorLifeCycle/Shared/NavMenu.cshtml
+++ b/BlazorLifeCycle/Shared/NavMenu.cshtml
@@ -18,8 +18,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="counters">
+                <span class="oi oi-plus" aria-hidden="true"></span> Counters
             </NavLink>
         </li>
     </ul>
