--- a/BlazorPersist/_ViewImports.cshtml
+++ b/BlazorPersist/_ViewImports.cshtml
@@ -2,5 +2,5 @@
 @using Microsoft.AspNetCore.Blazor.Layouts
 @using Microsoft.AspNetCore.Blazor.Routing
 @using Microsoft.JSInterop
-@using BlazorLifeCycle
-@using BlazorLifeCycle.Shared
+@using BlazorPersist
+@using BlazorPersist.Shared
