--- a/BlazorPersist/Pages/Index.cshtml
+++ b/BlazorPersist/Pages/Index.cshtml
@@ -2,6 +2,17 @@
 
 <h1>Blazor Persist</h1>
 
-This sample demonstrates a method for persisting data over browser refreshes, with optional expiration.
+<div class="card">
+    <div class="card-body">
+        <h5 class="card-title">
+            This sample demonstrates a method for persisting data over browser refreshes, with optional expiration.
+        </h5>
+        <p class="card-text">
+            Try clicking the counters and refreshing and/or closing the browser.
+            The click counts should persist.
+            Look at the local storage in Dev Tools (F12) to see the data.
+        </p>
+    </div>
+</div>
 
 <SurveyPrompt Title="How is Blazor working for you?" />
