--- a/BlazorPersist/Shared/NavMenu.cshtml
+++ b/BlazorPersist/Shared/NavMenu.cshtml
@@ -22,6 +22,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Counters
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="list">
+                <span class="oi oi-plus" aria-hidden="true"></span> List
+            </NavLink>
+        </li>
     </ul>
 </div>
 
