Update README and index page

--- a/BlazorPersist/Pages/Index.cshtml
+++ b/BlazorPersist/Pages/Index.cshtml
@@ -9,8 +9,27 @@
         </h5>
         <p class="card-text">
             Try clicking the counters and refreshing and/or closing the browser.
+        </p>
+        <p class="card-text">
             The click counts should persist.
+        </p>
+        <p class="card-text">
+            The single Counter has a 1 minute cache timeout.
+        </p>
+        <p class="card-text">
+            The double Counter has a 10 minute cache timeout.
+        </p>
+        <p class="card-text">
+            Try adding/removing users from the list - they should persist refreshes/closes with no timeout.
+        </p>
+        <p class="card-text">
             Look at the local storage in Dev Tools (F12) to see the data.
+        </p>
+        <p class="card-text">
+            None of the data stored leaves the browser - there is no server side to this app - the data is yours.
+        </p>
+        <p class="card-text">
+            <a href="https://github.com/SQL-MisterMagoo/BlazorPersist" target="_blank">Source on Github</a>
         </p>
     </div>
 </div>
