--- a/BlazorPersist/Shared/NavMenu.cshtml
+++ b/BlazorPersist/Shared/NavMenu.cshtml
@@ -27,6 +27,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> List
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="input">
+                <span class="oi oi-plus" aria-hidden="true"></span> Input
+            </NavLink>
+        </li>
     </ul>
 </div>
 
