--- a/BlazorPersist/Pages/Index.cshtml
+++ b/BlazorPersist/Pages/Index.cshtml
@@ -23,6 +23,9 @@
             Try adding/removing users from the list - they should persist refreshes/closes with no timeout.
         </p>
         <p class="card-text">
+            Try typing in the input box - it updates the label live on each keystroke and persists browser refreshes.
+        </p>
+        <p class="card-text">
             Look at the local storage in Dev Tools (F12) to see the data.
         </p>
         <p class="card-text">
