--- a/BlazorPersist/Pages/CounterWithClass.razor
+++ b/BlazorPersist/Pages/CounterWithClass.razor
@@ -4,8 +4,8 @@
 
 <p>Current counts: @currentCount?.Counter1 , @currentCount?.Counter2</p>
 
-<button class="btn btn-primary" onclick="@IncrementCount1">Click me 1</button>
-<button class="btn btn-secondary" onclick="@IncrementCount2">Click me 2</button>
+<button class="btn btn-primary" @onclick="IncrementCount1">Click me 1</button>
+<button class="btn btn-secondary" @onclick="IncrementCount2">Click me 2</button>
 
 @functions {
 
