--- a/BlazorPersist/Pages/List.razor
+++ b/BlazorPersist/Pages/List.razor
@@ -1,5 +1,4 @@
 ﻿@page "/list"
-@inherits BlazorComponent
 @using BlazorPersist.Models
 
 <h2>List Sample</h2>
@@ -9,11 +8,11 @@
     <div class="card-body">
         <div class="form-group callout-parent ">
             <label for="parent">New User : </label>
-            <button class="btn btn-primary" id="parent" onclick="@AddNewUser">New User</button>
+            <button class="btn btn-primary" id="parent" @onclick="AddNewUser">New User</button>
         </div>
         <div class="@AddingNewUser">
             <div class="input-group mb-3">
-                <input bind=@localName
+                <input @bind=@localName
                        type="text"
                        class="form-control"
                        placeholder="Username"
@@ -23,7 +22,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1">@@</span>
                 </div>
-                <input bind=@localNick
+                <input @bind=@localNick
                        type="text"
                        class="form-control"
                        placeholder="Nickname"
@@ -31,8 +30,8 @@
                        aria-describedby="basic-addon1" />
             </div>
             <div>
-                <button class="btn btn-success" onclick=@AddNewUserConfirm>Confirm</button>
-                <button class="btn btn-danger" onclick=@AddNewUserCancel>Cancel</button>
+                <button class="btn btn-success" @onclick=@AddNewUserConfirm>Confirm</button>
+                <button class="btn btn-danger" @onclick=@AddNewUserCancel>Cancel</button>
             </div>
         </div>
     </div>
@@ -42,7 +41,7 @@
 <div class="card">
     <div class="card-body">
         <div class="form-group callout-child">
-            <ListView bind-ListData="@data" ChangeAction="@ListItemChanged" TList="SampleUserData">
+            <ListView @bind-ListData="@data" ChangeAction="ListItemChanged" TList="SampleUserData">
                 <ListItemContent>
                     <h6>@context.Name ( @($"@{context.NickName}") )</h6>
                 </ListItemContent>
@@ -53,7 +52,6 @@
 
 @functions
 {
-  void Refresh(UIMouseEventArgs args) => StateHasChanged();
 
   string AddingNewUser = "d-none";
   string localName = "";
@@ -65,13 +63,13 @@
       StateHasChanged();
   }
 
-  void AddNewUser(UIMouseEventArgs args)
+  void AddNewUser(MouseEventArgs args)
   {
       AddingNewUser = "";
       StateHasChanged();
   }
 
-  void AddNewUserConfirm(UIMouseEventArgs args)
+  void AddNewUserConfirm(MouseEventArgs args)
   {
       if (string.IsNullOrWhiteSpace(localName) ||
           string.IsNullOrWhiteSpace(localNick) ||
@@ -87,7 +85,7 @@
       AddingNewUser = "d-none";
       StateHasChanged();
   }
-  void AddNewUserCancel(UIMouseEventArgs args)
+  void AddNewUserCancel(MouseEventArgs args)
   {
       AddingNewUser = "d-none";
       StateHasChanged();
