--- a/BlazorPersist/Components/ListView.razor
+++ b/BlazorPersist/Components/ListView.razor
@@ -10,7 +10,7 @@ else
     foreach (var listItem in ListData)
     {
         <div class="list-group-sm">
-            <button onclick="@(e => SelectItem(listItem) )" class="list-group-item list-group-item-action @GetActive(listItem)">
+            <button @onclick="(e => SelectItem(listItem) )" class="list-group-item list-group-item-action @GetActive(listItem)">
                 <div class="input-group">
                     <span class="d-flex w-50 justify-content-between col">
                         @ListItemContent(listItem)
